12223 FIX Fix text wrap of wato error messages
FEED-5727

--- a/web/htdocs/themes/facelift/scss/_wato.scss
+++ b/web/htdocs/themes/facelift/scss/_wato.scss
@@ -1170,6 +1170,10 @@ table.data tr.data.dcd_log_entries {
   }
 }
 
+.wato div.error pre {
+  white-space: pre-wrap;
+}
+
 /* TODO: Reproduce this html element */
 .wato div.error div.err {
   position: relative;
